fix(yalb-1319): changing media to max-height to fix overflow issue on firefox android

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -100,8 +100,8 @@ $modal-speed: var(--animation-speed-slow);
 
 .media-grid-modal__media {
   grid-area: media;
-  height: 100%;
   width: 100%;
+  max-height: 100%;
 
   img {
     height: 100%;
